--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -27,7 +27,7 @@ aws-lambda-env-modeler = "*"
 
 [tool.poetry.dev-dependencies]
 # CDK
-service-cdk = {path = "cdk", develop = true}
+{{cookiecutter.service_name}}-cdk = {path = "cdk", develop = true}
 aws-cdk-lib = ">=2.130.0"
 constructs = ">=10.0.0"
 cdk-nag = ">2.0.0"
